# webthree-umbrella

./: .gitignore  .gitmodules  CMakeLists.txt  CodingStandards.txt  GPU_mining_command.md  README.md  build_source.md  recreate-cpp-elementrem.sh  sync.sh  ubuntu_dependency.md
alelezero/: CMakeLists.txt
alelezero/alelezero/: AccountNamerPlugin.cpp  AccountNamerPlugin.h  AleleZero.cpp  AleleZero.h  AleleZero.ui  CMakeLists.txt  Connect.cpp  Connect.h  NetworkSettings.cpp  NetworkSettings.h  NetworkSettings.ui  Plugin.cpp  Plugin.h  SettingsDialog.cpp  SettingsDialog.h  TransactDialog.cpp  TransactDialog.h  ZeroFace.cpp  ZeroFace.h  alelezero.rc  main.cpp
alelezero/libalele/: AccountHolder.cpp  AccountHolder.h  AccountNamer.cpp  AccountNamer.h  Alele.cpp  Alele.h  AleleFace.cpp  AleleFace.h  AleleWhisper.cpp  AleleWhisper.h  CMakeLists.txt  Common.cpp  Common.h  Context.cpp  Context.h  DappHost.cpp  DappHost.h  DappLoader.cpp  DappLoader.h  Debugger.cpp  Debugger.h  JSResources.cmake  NatspecHandler.cpp  NatspecHandler.h  RPCHost.cpp  RPCHost.h  SendDialog.cpp  SendDialog.h  SendDialog.ui  Slave.cpp  Slave.h  SyncView.cpp  SyncView.h
libelementrem/: .gitmodules  CMakeLists.txt
libelementrem/elekey/: CMakeLists.txt  KeyAux.h  main.cpp
libelementrem/eleminer/: CMakeLists.txt  FarmClient.h  MinerAux.h  main.cpp
libelementrem/elevm/: CMakeLists.txt  main.cpp
libelementrem/libelecore/: ABI.cpp  ABI.h  BasicAuthority.cpp  BasicAuthority.h  BlockHeader.cpp  BlockHeader.h  CMakeLists.txt  ChainOperationParams.cpp  ChainOperationParams.h  Common.cpp  Common.h  CommonJS.cpp  CommonJS.h  Exceptions.h  ICAP.cpp  ICAP.h  KeyManager.cpp  KeyManager.h  Precompiled.cpp  Precompiled.h  SealEngine.cpp  SealEngine.h  Transaction.cpp  Transaction.h
libelementrem/libelementrem/: Account.cpp  Account.h  AccountDiff.cpp  AccountDiff.h  All.h  BasicGasPricer.cpp  BasicGasPricer.h  Block.cpp  Block.h  BlockChain.cpp  BlockChain.h  BlockChainSync.cpp  BlockChainSync.h  BlockDetails.cpp  BlockDetails.h  BlockQueue.cpp  BlockQueue.h  CMakeLists.txt  CachedAddressState.cpp  CachedAddressState.h  ChainParams.cpp  ChainParams.h  Client.cpp  Client.h  ClientBase.cpp  ClientBase.h  ClientTest.cpp  ClientTest.h  CommonNet.cpp  CommonNet.h  Defaults.cpp  Defaults.h  ElementremHost.cpp  ElementremHost.h  ElementremPeer.cpp  ElementremPeer.h  Executive.cpp  Executive.h  ExtVM.cpp  ExtVM.h  (+23 more)
libelementrem/libelhash/: CMakeLists.txt  compiler.h  data_sizes.h  elhash.h  endian.h  fnv.h  internal.c  io.c  io.h  io_posix.c  io_win32.c  mmap.h  sha3_cryptopp.cpp  util.c  util.h  util_win32.c
libelementrem/libelhash-cl/: CMakeLists.txt  elhash_cl_miner.cpp  elhash_cl_miner.h  elhash_cl_miner_kernel.cl
libelementrem/libelhashseal/: CMakeLists.txt  Elhash.cpp  Elhash.h  ElhashAux.cpp  ElhashAux.h  ElhashCPUMiner.cpp  ElhashCPUMiner.h  ElhashClient.cpp  ElhashClient.h  ElhashGPUMiner.cpp  ElhashGPUMiner.h  ElhashProofOfWork.cpp  ElhashProofOfWork.h  GenesisInfo.cpp  GenesisInfo.h
libelementrem/libevm/: CMakeLists.txt  ExtVMFace.cpp  ExtVMFace.h  JitEnv.cpp  JitUtils.h  JitVM.cpp  JitVM.h  SmartVM.cpp  SmartVM.h  VM.cpp  VM.h  VMFace.h  VMFactory.cpp  VMFactory.h
libelementrem/libevmcore/: CMakeLists.txt  EVMSchedule.h  Exceptions.h  Instruction.cpp  Instruction.h
libelementrem/libnatspec/: CMakeLists.txt  NatspecExpressionEvaluator.cpp  NatspecExpressionEvaluator.h  NatspecResources.cmake
libelementrem/libtestutils/: BlockChainLoader.cpp  BlockChainLoader.h  CMakeLists.txt  Common.cpp  Common.h  FixedClient.cpp  FixedClient.h
libelementrem/test/: BlockChainHelper.cpp  BlockChainHelper.h  CMakeLists.txt  JsonSpiritHeaders.h  Stats.cpp  Stats.h  TestHelper.cpp  TestHelper.h  TestUtils.cpp  TestUtils.h  boostTest.cpp
libweb3core/: CMakeLists.txt
libweb3core/bench/: CMakeLists.txt  main.cpp
libweb3core/libdevcore/: Assertions.h  Base58.cpp  Base58.h  CMakeLists.txt  Common.cpp  Common.h  CommonData.cpp  CommonData.h  CommonIO.cpp  CommonIO.h  CommonJS.cpp  CommonJS.h  Diff.h  Exceptions.h  FileSystem.cpp  FileSystem.h  FixedHash.cpp  FixedHash.h  Guards.cpp  Guards.h  Hash.cpp  Hash.h  Log.cpp  Log.h  MemoryDB.cpp  MemoryDB.h  OverlayDB.cpp  OverlayDB.h  RLP.cpp  RLP.h  RangeMask.cpp  RangeMask.h  SHA3.cpp  SHA3.h  Terminal.h  TransientDirectory.cpp  TransientDirectory.h  TrieCommon.cpp  TrieCommon.h  TrieDB.cpp  (+9 more)
libweb3core/libdevcrypto/: AES.cpp  AES.h  CMakeLists.txt  Common.cpp  Common.h  CryptoPP.cpp  CryptoPP.h  ECDHE.cpp  ECDHE.h  Exceptions.h  SecretStore.cpp  SecretStore.h  WordList.cpp  WordList.h
libweb3core/libp2p/: CMakeLists.txt  Capability.cpp  Capability.h  Common.cpp  Common.h  Host.cpp  Host.h  HostCapability.cpp  HostCapability.h  Network.cpp  Network.h  NodeTable.cpp  NodeTable.h  Peer.cpp  Peer.h  RLPXFrameCoder.cpp  RLPXFrameCoder.h  RLPXFrameReader.cpp  RLPXFrameReader.h  RLPXFrameWriter.cpp  RLPXFrameWriter.h  RLPXPacket.h  RLPXSocket.h  RLPXSocketIO.cpp  RLPXSocketIO.h  RLPxHandshake.cpp  RLPxHandshake.h  Session.cpp  Session.h  UDP.cpp  UDP.h  UPnP.cpp  UPnP.h
libweb3core/rlp/: CMakeLists.txt  main.cpp
libweb3core/test/: CMakeLists.txt  memorydb.cpp  overlaydb.cpp  test.cpp  test.h
mix/: CMakeLists.txt  qml.qrc  style.xml
mix/qml/: AboutMix.qml  AlertMessageDialog.qml  Application.qml  BasicMessage.qml  BigIntValue.qml  Block.qml  BlockChain.qml  CallStack.qml  CodeEditor.qml  CodeEditorView.qml  CommonSeparator.qml  CopyButton.qml  DebugBasicInfo.qml  DebugInfoList.qml  Debugger.qml  DefaultButton.qml  DefaultCombobox.qml  DefaultCompleteButton.qml  DefaultImgButton.qml  DefaultLabel.qml  DefaultRadioButton.qml  DefaultText.qml  DefaultTextArea.qml  DefaultTextField.qml  DeployContractStep.qml  DeploymentDialog.qml  DeploymentDialogSteps.qml  DeploymentOptions.qml  DeploymentWorker.qml  DisableInput.qml  DropdownButton.qml  Element.qml  ElementValue.qml  Folder.qml  GasPrice.qml  ItemDelegateDataDump.qml  KeyValuePanel.qml  LogsPane.qml  LogsPaneStyle.qml  MacFileDialog.qml  (+50 more)
mix/src/: ClientModel.cpp  (+42 more)
solidity/: CMakeLists.txt
webthree/: CMakeLists.txt
(+480 files in other folders)
